--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
             z-index: -1;
             overflow: hidden;
         }
-        .bg svg {
+        .bg div {
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
+        }
+        .canvas-holder {
+            display: inline-block;
+            width: 500px;
+            height: 500px;
         }
     </style>
 </head>
@@ -43,26 +48,31 @@
         </path></g>
     </svg>
 </div>
+<div id="befcCellContainer" class="canvas-holder">
+</div>
+<div id="befcPlatformContainer" class="canvas-holder">
+</div>
 
+<!--Module for befc cell-->
 <script type="module">
     import * as THREE from 'https://cdn.skypack.dev/pin/three@v0.133.1-a8rkd0QTHl2tMZXZJAEw/mode=imports,min/optimized/three.js';
     //renderer
+    var container = document.getElementById("befcCellContainer");
     const renderer = new THREE.WebGLRenderer({alpha: true, antialias: true });
-    renderer.setSize( window.innerWidth, window.innerHeight );
-    renderer.setClearColor( 0x000000, 0 ); // the default
-    document.body.appendChild( renderer.domElement );
+    renderer.setClearColor( 0x000000, 0 );
+    var box = container.getBoundingClientRect();
+    renderer.setSize(box.width, box.height);
+    container.appendChild( renderer.domElement );
+
+    //Scene setup
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera( 45, box.width/box.height, 0.9, 1000 );
+    camera.position.z = -5;
 
 
     //GLTFLoader
     import {GLTFLoader} from 'https://cdn.skypack.dev/pin/three@v0.133.1-a8rkd0QTHl2tMZXZJAEw/dist=es2020,mode=imports/unoptimized/examples/jsm/loaders/GLTFLoader.js';
     const loader = new GLTFLoader();
-
-
-
-    //Scene setup
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera( 50, window.innerWidth / window.innerHeight, 0.9, 1000 );
-    camera.position.z = -5;
 
     //Controls
     import {OrbitControls} from 'https://cdn.skypack.dev/pin/three@v0.133.1-a8rkd0QTHl2tMZXZJAEw/dist=es2020,mode=imports/unoptimized/examples/jsm/controls/OrbitControls.js';
@@ -73,17 +83,13 @@
     controls.noZoom = true;
     controls.noPan = true;
 
-
-
-
-
-    window.addEventListener('resize', onWindowResize, false)
-    function onWindowResize() {
-        camera.aspect = window.innerWidth / window.innerHeight
-        camera.updateProjectionMatrix()
-        renderer.setSize(window.innerWidth, window.innerHeight)
-        render()
-    }
+    // window.addEventListener('resize', onWindowResize, false)
+    // function onWindowResize() {
+    //     camera.aspect = window.innerWidth / window.innerHeight
+    //     camera.updateProjectionMatrix()
+    //     renderer.setSize(window.innerWidth, window.innerHeight)
+    //     render()
+    // }
 
 
     //lights
@@ -114,8 +120,83 @@
 
     } );
 
-    //load befc
-    // camera.position.set( 0, -4, 0 );
+    function animate() {
+        requestAnimationFrame( animate );
+
+        controls.update();
+
+        renderer.render( scene, camera );
+    }
+    animate();
+</script>
+
+
+<!--Module for platform-->
+<script type="module">
+    import * as THREE from 'https://cdn.skypack.dev/pin/three@v0.133.1-a8rkd0QTHl2tMZXZJAEw/mode=imports,min/optimized/three.js';
+    //renderer
+    var container = document.getElementById("befcPlatformContainer");
+    const renderer = new THREE.WebGLRenderer({alpha: true, antialias: true });
+    renderer.setClearColor( 0x000000, 0 );
+    var box = container.getBoundingClientRect();
+    renderer.setSize(box.width, box.height);
+    container.appendChild( renderer.domElement );
+
+    //Scene setup
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera( 45, box.width/box.height, 0.9, 1000 );
+    camera.position.z = -5;
+
+
+    //GLTFLoader
+    import {GLTFLoader} from 'https://cdn.skypack.dev/pin/three@v0.133.1-a8rkd0QTHl2tMZXZJAEw/dist=es2020,mode=imports/unoptimized/examples/jsm/loaders/GLTFLoader.js';
+    const loader = new GLTFLoader();
+
+    //Controls
+    import {OrbitControls} from 'https://cdn.skypack.dev/pin/three@v0.133.1-a8rkd0QTHl2tMZXZJAEw/dist=es2020,mode=imports/unoptimized/examples/jsm/controls/OrbitControls.js';
+    const controls = new OrbitControls( camera, renderer.domElement );
+    // import {TrackballControls} from 'https://cdn.skypack.dev/pin/three@v0.133.1-a8rkd0QTHl2tMZXZJAEw/dist=es2020,mode=imports/unoptimized/examples/jsm/controls/TrackballControls.js';
+    // const controls = new TrackballControls( camera, renderer.domElement );
+    controls.rotateSpeed = 0.8;
+    controls.noZoom = true;
+    controls.noPan = true;
+
+    // window.addEventListener('resize', onWindowResize, false)
+    // function onWindowResize() {
+    //     camera.aspect = window.innerWidth / window.innerHeight
+    //     camera.updateProjectionMatrix()
+    //     renderer.setSize(window.innerWidth, window.innerHeight)
+    //     render()
+    // }
+
+
+    //lights
+    const light = new THREE.AmbientLight( 0xffffff );
+    scene.add( light );
+    const light1 = new THREE.PointLight( 0xffffff, .8, 1000 );
+    light1.position.set( 10, -50, -10 );
+    scene.add( light1 );
+
+    // loader.load( 'https://cdn1231.fra1.digitaloceanspaces.com/BeFC/cell.glb', function ( cell ) {
+    loader.load( 'platform.glb', function ( cell ) {
+        scene.add( cell.scene );
+
+        // const mixer = new THREE.AnimationMixer( cell.scene.children.namedItem("cell_low") );
+        // const clips = cell.animations;
+        //
+        // function update () {
+        //     mixer.update( deltaSeconds );
+        // }
+        //
+        // clips.forEach( function ( clip ) {
+        //     mixer.clipAction( clip ).play();
+        // } );
+
+    }, undefined, function ( error ) {
+
+        console.error( error );
+
+    } );
 
     function animate() {
         requestAnimationFrame( animate );
